K8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: mexparedes/api-pruebas:20230820144146  # Reemplaza con la URL de tu imagen Docker en Docker Hub
          ports:
            - containerPort: 3000
